--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,16 @@
 
 	<title>Chaos for Marius</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<meta name="msapplication-config" content="/browserconfig.xml" />
+	<meta name="msapplication-TileColor" content="445566">
+	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+	<meta name="theme-color" content="330011">
+
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
