--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
 
 	<meta name="theme-color" content="330011">
 
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+	<link rel='stylesheet' href='global.css'>
+	<link rel='stylesheet' href='build/bundle.css'>
 
-	<script defer src='/build/bundle.js'></script>
+	<script defer src='build/bundle.js'></script>
 </head>
 
 <body>
