--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,96 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
-
 	<title>Chaos for Marius</title>
-
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
-	<meta name="msapplication-config" content="/browserconfig.xml" />
+	<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+	<link rel="manifest" href="site.webmanifest">
+	<meta name="msapplication-config" content="browserconfig.xml" />
 	<meta name="msapplication-TileColor" content="445566">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
-	<meta name="theme-color" content="330011">
-
-	<link rel='stylesheet' href='global.css'>
-	<link rel='stylesheet' href='build/bundle.css'>
-
-	<script defer src='build/bundle.js'></script>
 </head>
 
+<style>
+canvas{
+    box-shadow: 1px 1px 4px #000;
+    max-width: 80vmin;
+    height: auto;
+}
+html, body{
+    display: grid;
+    height: 100%;
+    place-items: center;
+    background-color: #456;;
+}
+
+.app{
+    display: flex;
+}
+@media screen and (orientation:portrait){
+    .app{
+        flex-direction: column;
+    }
+}
+.controlls{
+    padding: 1em;
+    gap: 1em;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+</style>
 <body>
+
+    <div class="app">
+        <canvas id="canvas" width="1000" height="1000"></canvas>
+        <div class="controlls">
+        <input type="range" min="3" max="12" value="10"/>
+        <button type="button" >Download</button>
+        </div>
+    </div>
+
+    <script type="module">
+
+    let canvas = document.getElementById("canvas")
+
+    let context = canvas.getContext('2d');
+
+    import {drawMarius} from "./modules/marius.js"
+    drawMarius(context)
+
+    let target = [0,0];
+    let colums= 10;
+
+    canvas.addEventListener('click', function(event) {
+        let {width:clientWidth, height:clientHeight} = canvas.getBoundingClientRect();        
+        let x =  event.offsetX / clientWidth * canvas.width
+        let y =  event.offsetY / clientHeight * canvas.height;
+        target = [x,y];
+        drawMarius(context,target,colums)
+    })
+
+    let range = document.querySelector("[type='range']");
+    range.addEventListener("input", (event)=>{
+        colums = range.value;
+        drawMarius(context,target,colums )
+    })
+
+
+    let button = document.querySelector("[type='button']");
+    button.addEventListener("click", (event)=>{
+        var image = canvas.toDataURL();
+        // Create a link
+        var aDownloadLink = document.createElement('a');
+        // Add the name of the file to the link
+        aDownloadLink.download = `marius-${Date.now()}.png`;
+        // Attach the data to the link
+        aDownloadLink.href = image;
+        // Get the code to click the download link
+        aDownloadLink.click();    })
+    </script>
+
 </body>
 </html>
